mrfe-backend/kubernetes/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrfe-frontend
spec:
  selector:
    app: mrfe-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
