mrfe-backend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrfe-api
spec:
  selector:
    app: mrfe-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
