mrfe-backend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrfe-ingress
spec:
  rules:
    - host: mrfe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mrfe-api
                port:
                  number: 80
